Create maven-publish.yml