@@ -1,16 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mihmetcrido</groupId>
-    <artifactId>pp</artifactId>
+    <artifactId>directory-tree-viewer</artifactId> <!-- Updated artifactId -->
     <version>1.0-SNAPSHOT</version>
 
-    <build>
-        <finalName>xp</finalName> <!-- Specify your desired JAR file name here -->
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub MihmetCrido Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/MihmetCrido/Directory-Tree-Viewer</url>
+        </repository>
+    </distributionManagement>
 
+    <build>
         <plugins>
             <!-- Maven Shade Plugin to create an uber JAR -->
             <plugin>
@@ -24,10 +29,9 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>xp</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.mihmetcrido.Main</mainClass> <!-- Replace with your main class -->
+                                    <mainClass>com.mihmetcrido.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -39,18 +43,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -58,7 +62,7 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>LATEST</version>
+            <version>1.9.0</version>
         </dependency>
     </dependencies>
 </project>
